--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,44 @@
-
 name: Build Script
 
 on:
   push:
-    branches: [ main ]  # 触发构建的分支，这里设置为 master，可以根据需要调整
+    branches: [ main ]  # 确保使用正确的主分支名称
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # 定义运行环境
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2  # 检出代码
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '21'  # 设置 Node.js 版本
+          node-version: '16'  # 使用更稳定的 Node.js 版本
 
       - name: Install dependencies
-        run: npm install  # 安装依赖
+        run: npm install
 
       - name: Run build script
-        run: npm run build  # 执行构建脚本
+        run: npm run build
 
+      - name: Check for changes
+        id: git-check
+        run: |
+          git diff --quiet || echo "::set-output name=changes_detected::true"
+      
       - name: Commit files
+        if: steps.git-check.outputs.changes_detected == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -f dist/
-          git commit -m "Automated build commit" -a
-        if: success()
+          git commit -m "Automated build commit"
+          if: success()
 
       - name: Push changes
+        if: steps.git-check.outputs.changes_detected == 'true'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -43,4 +49,5 @@ jobs:
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     
