--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '21'  # 假设您正在使用 Node.js 16
+          node-version: '16'  # 假设您正在使用 Node.js 16
     
       - name: Install dependencies
         run: npm install
@@ -45,6 +45,6 @@ jobs:
         if: steps.git-check.outputs.changes_detected == 'true'
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           force: true
           branch: ${{ github.ref }}
