--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,6 @@ jobs:
         if: steps.git-check.outputs.changes_detected == 'true'
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          github_token: ${{ secrets.Action.PERSONAL_ACCESS_TOKEN }}
           force: true
           branch: ${{ github.ref }}
