--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build Script
 
 on:
   push:
-    branches: [ main ]  # 确保使用正确的主分支名称
+    branches: [ main ]  # 使用主分支名称
 
 jobs:
   build:
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v2
     
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  # 使用最新版本的 setup-node
         with:
-          node-version: '16'  # 假设您正在使用 Node.js 16
+          node-version: '16'  # 使用 Node.js 16
     
       - name: Install dependencies
         run: npm install
@@ -26,7 +26,8 @@ jobs:
       - name: Check for changes
         id: git-check
         run: |
-          if git diff --quiet; then
+          git diff --quiet && git diff --staged --quiet
+          if [ $? -eq 0 ]; then
             echo "No changes to commit."
             echo "::set-output name=changes_detected::false"
           else
@@ -43,8 +44,8 @@ jobs:
           
       - name: Push changes
         if: steps.git-check.outputs.changes_detected == 'true'
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@v0.6.0  # 使用固定版本号
         with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}  # 使用 GITHUB_TOKEN
           force: true
           branch: ${{ github.ref }}
