--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A Tampermonkey script with automated version control",
   "scripts": {
     "build": "node build.js",
-    "semantic-release": "semantic-release",
-    "prebuild": "node increment-version.js"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
