--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build Script
 
 on:
   push:
-    branches: [ main ]  # 使用主分支名称
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,46 +13,43 @@ jobs:
         uses: actions/checkout@v2
     
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # 使用最新版本的 setup-node
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'  # 使用 Node.js 16
-    
+          node-version: '21'
+
       - name: Install dependencies
         run: npm install
     
       - name: Run build script
         run: npm run build
-
-      - name: Set executable permissions for semantic-release
-        run: chmod +x $(which semantic-release)
       
       - name: Run Semantic Release
         run: npx semantic-release
-      
-          
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}  # 确保已设置此环境变量如果需要发布到npm
+    
       - name: Check for changes
         id: git-check
         run: |
-          git diff --quiet && git diff --staged --quiet
-          if [ $? -eq 0 ]; then
-            echo "No changes to commit."
+          if git diff --quiet && git diff --staged --quiet; then
             echo "::set-output name=changes_detected::false"
           else
             echo "::set-output name=changes_detected::true"
           fi
-    
+
       - name: Commit files
         if: steps.git-check.outputs.changes_detected == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add .  # Add all modified files
+          git add .
           git commit -m "Automated build commit"
           
       - name: Push changes
         if: steps.git-check.outputs.changes_detected == 'true'
-        uses: ad-m/github-push-action@v0.6.0  # 使用固定版本号
+        uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # 使用 GITHUB_TOKEN
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
           branch: ${{ github.ref }}
