--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "url": "https://github.com/taigongzhaihua/TampermonkeyTJFZXT.git"
   },
   "devDependencies": {
+    "semantic-release": "^17.4.7",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.1",
-    "@semantic-release/npm": "^7.1.3",
-    "semantic-release": "^17.4.7"
+    "@semantic-release/npm": "^7.1.3"
   },
   "release": {
     "branches": [
