--- a/.releaserc
+++ b/.releaserc
@@ -4,16 +4,10 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/npm",  
     {
       "path": "@semantic-release/git",
-      "assets": [
-        "package.json",
-        "CHANGELOG.md",
-        "docs",  
-        "build"  
-      ],
-      "message": "chore(release): release ${nextRelease.version} [skip ci]" 
+      "assets": ["package.json", "CHANGELOG.md"],
+      "message": "chore(release): release ${nextRelease.version}"
     }
   ]
 }
