--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "your-script",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "A Tampermonkey script with automated version control",
   "scripts": {
     "build": "node build.js",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "prebuild": "node increment-version.js"
   },
   "repository": {
     "type": "git",
