--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "your-script",
   "version": "0.1.6",
   "description": "A Tampermonkey script with automated version control",
+  "type": "module",
   "scripts": {
     "build": "node build.js",
     "semantic-release": "semantic-release",
