--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "node build.js",
     "semantic-release": "semantic-release",
-    "prebuild": "node increment-version.js"
+    "prebuild": "node increment-version.js",
+    "upload-to-jianguoyun": "node upload-to-jianguoyun.js"
   },
   "repository": {
     "type": "git",
