--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,13 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Fetch all history so that the script can determine the changes
     
       - name: Set up Node.js
         uses: actions/setup-node@v3  # 使用最新版本的 setup-node
         with:
-          node-version: '16'  # 使用 Node.js 16
+          node-version: '21'  # 使用 Node.js 21
     
       - name: Install dependencies
         run: npm install
